--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 ext {
-    junitVersion = '5.8.1'
+    junitVersion = '5.8.2'
 }
 
 sourceCompatibility = '11'
@@ -35,6 +35,14 @@ javafx {
 
 dependencies {
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
+    implementation files('libs/ojdbc8.jar')
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
+    implementation 'mysql:mysql-connector-java:8.0.28'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
+    implementation 'com.oracle.database.jdbc:ucp:21.5.0.0'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
